# big-data-assignment-4196

./: .gitignore  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  SUBMISSION_CHECKLIST.md  consumer.py  dlq_consumer.py  docker-compose.yml  git_setup.ps1  producer.py  pyproject.toml  requirements.txt  run_demo.ps1
src/: consumer.py  dlq_consumer.py  logger.py  producer.py  test_system.py
src/schema/: order.avsc
